# Qmini_ws

./: README.md  command.md
src/g1_description/g1/: g1_23dof.urdf
src/pi_description/: CMakeLists.txt  package.xml
src/pi_description/config/: pi_config.rviz
src/pi_description/launch/: view_pi.launch.py  view_pi_with_config.launch.py
src/pi_description/pi_12dof/urdf/: pi_12dof_release_v1.urdf  pi_12dof_release_v1_fixed.urdf
src/pi_description/scripts/: save_current_rviz.py  save_rviz_config.py
src/q1_description/: CMakeLists.txt  package.xml
src/q1_description/config/: q1_config.rviz
src/q1_description/launch/: view_q1.launch.py
src/q1_description/urdf/: q1.urdf
src/qmini_description/: CMakeLists.txt  Qmini_with_auxiliary_contacts.urdf  config.rviz  package.xml
src/qmini_description/config/: qmini_basic_config.rviz  qmini_contacts_config.rviz
src/qmini_description/launch/: view_qmini.launch.py  view_qmini_gym.launch.py  view_qmini_inline_rviz.launch.py  view_qmini_with_contacts.launch.py
src/qmini_description/urdf/: Qmini.urdf  qmini_gym.urdf
